# quizapp

./: .dockerignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.test.yml  compose.yml  start.sh
.github/workflows/: quality.yaml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  pytest.ini  requirements.txt  sample.env
backend/quizapp/: config.py  crud.py  database.py  main.py
backend/quizapp/routers/: api.py  dummies.py  quizzes.py
backend/quizapp/schemas/: quiz.py
backend/tests/: conftest.py  test_main.py
backend/tests/routers/: test_dummies.py  test_quizzes.py
backend/tests/schemas/: test_quiz.py
docs/: domain.md  models.md
frontend/: .dockerignore  .prettierrc  Dockerfile  README.md  eslint.config.js  main.js  package-lock.json  package.json  tailwind.config.js  vite.config.docker.js  vite.config.js
frontend/src/: app.css  app.html  hooks.server.js
frontend/src/lib/: QuizFeedCard.svelte  types.js
frontend/src/routes/: +layout.svelte  +page.server.js  +page.svelte
frontend/src/routes/hello/: +page.svelte
frontend/src/routes/ping/: +page.svelte
frontend/src/routes/quiz/create/: +page.server.js  +page.svelte
